fix(ags): try to fix workspace alignment

--- a/config/ags/scss/widgets/overview.scss
+++ b/config/ags/scss/widgets/overview.scss
@@ -4,14 +4,13 @@
 
   .workspace .window {
     border-radius: 10px;
-
+    margin: 0 10px;
   }
 
   .normal {
     margin-bottom: 5px;
 
     .workspace {
-      margin: 0 10px;
 
       .window {
         border: 2px solid #411C6C;
@@ -25,7 +24,6 @@
   .special {
 
     .workspace {
-      margin: 0 5px;
 
       .window {
         border: 2px solid lighten($color: black, $amount: 20);
