--- a/config/ags/style.css
+++ b/config/ags/style.css
@@ -669,18 +669,15 @@ calendar:indeterminate {
   min-height: 1px;
   min-width: 1px; }
   .overview .workspace .window {
-    border-radius: 10px; }
+    border-radius: 10px;
+    margin: 0 10px; }
   .overview .normal {
     margin-bottom: 5px; }
-    .overview .normal .workspace {
-      margin: 0 10px; }
-      .overview .normal .workspace .window {
-        border: 2px solid #411C6C; }
-        .overview .normal .workspace .window.active {
-          border: 2px solid purple; }
-  .overview .special .workspace {
-    margin: 0 5px; }
-    .overview .special .workspace .window {
-      border: 2px solid #333333; }
-      .overview .special .workspace .window.active {
+    .overview .normal .workspace .window {
+      border: 2px solid #411C6C; }
+      .overview .normal .workspace .window.active {
         border: 2px solid purple; }
+  .overview .special .workspace .window {
+    border: 2px solid #333333; }
+    .overview .special .workspace .window.active {
+      border: 2px solid purple; }
